docs: rewrite hprof-size-discrepancy-scenarios with full object layout section
Add a comprehensive Background section covering:
- Runtime object layout for all three JVM configurations:
  standard compressed-oops ON (SapMachine 21, heap <32 GB),
  compressed-oops OFF (heap ≥32 GB), and Compact Object Headers
  (JEP 519, JDK 25)
- HPROF INSTANCE_DUMP wire format annotated byte-by-byte
- Side-by-side comparison table for Node{next;int} across all configs
- Per-class disk/MAT and disk/runtime ratio table for common classes
- Array subrecord formats (PRIM_ARRAY and OBJ_ARRAY) with examples
- The four distinct kinds of size difference (disk>MAT, MAT>runtime, etc.)
- What diagnose can and cannot compute (disk/MAT exact; disk/runtime requires
  CLASS_DUMP field parsing which is not yet implemented)

Expand Scenario 2 (UTF-8) with:
- Symbol category table (class names, method names, descriptors, etc.)
- Wire format annotation
- Typical section sizes by app profile
- MAT residency vs. transient-parse behaviour

Consolidate and clean up Scenarios 11–12 with precise language about which
comparison is disk>MAT vs MAT>runtime (the instance ref expansion
distinction introduced in the previous commit).

Update triage guide Step 3 and 4 to reference the new overhead breakdown
output from TextReportWriter.